<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home"
        android:title="@string/bottom_nav_home"/>
    <item
        android:id="@+id/page_bookmark"
        android:enabled="true"
        android:icon="@drawable/ic_outline_bookmark_border"
        android:title="@string/all_bookmark"/>
    <item
        android:id="@+id/page_noti"
        android:enabled="true"
        android:icon="@drawable/ic_noti"
        android:title="@string/bottom_nav_noti"/>
    <item
        android:id="@+id/page_profile"
        android:enabled="true"
        android:icon="@drawable/ic_outline_account_circle"
        android:title="@string/bottom_nav_profile"/>
</menu>