<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/content_action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_baseline_filter_list"
        android:title="@string/btn_filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/page_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_comment"
        android:title="@string/profile_category_profile" />

    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_comment"
        android:title="@string/profile_logout" />
</menu>