<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.main.FilterQuestionActivity">

        <TextView
            android:id="@+id/tv_question_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_y"
            android:gravity="center"
            android:text="@string/question_sort"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rag_question_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_between_y_md"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rad_question_sort_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_between_x_sm"
                android:text="@string/question_all" />

            <RadioButton
                android:id="@+id/rad_question_sort_most_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_between_x_sm"
                android:text="@string/question_sort_most_view" />

            <RadioButton
                android:id="@+id/rad_question_sort_top_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_between_x_sm"
                android:text="@string/question_sort_top_week" />

            <RadioButton
                android:id="@+id/rad_question_sort_top_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_between_x_sm"
                android:text="@string/question_sort_top_month" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_question_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_y_lg"
            android:gravity="center"
            android:text="@string/question_status"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_y_md"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rad_question_status_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_between_x_md"
                android:text="@string/question_all" />

            <RadioButton
                android:id="@+id/rad_question_status_answered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_between_x_md"
                android:text="@string/question_answered" />

            <RadioButton
                android:id="@+id/rad_question_status_unanswered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_between_x_md"
                android:text="@string/question_unanswered" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_y_lg"
            android:gravity="center"
            android:text="@string/category_grade"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/LinearLayoutGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_between_x_lg"
            android:layout_marginTop="@dimen/margin_between_y_md"
            android:layout_marginEnd="@dimen/margin_between_x"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="All" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_grade_1" />

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_grade_2" />

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_grade_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_grade_3" />

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_grade_5" />

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_grade_6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_grade_7" />

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_grade_8" />

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_grade_9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_grade_10" />

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_grade_11" />

                <CheckBox
                    android:onClick="selectGrade"
                    android:id="@+id/chk_grade_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_grade_12" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_y_lg"
            android:gravity="center"
            android:text="@string/category_course"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/LinearLayoutCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_between_x_lg"
            android:layout_marginTop="@dimen/margin_between_y_md"
            android:layout_marginEnd="@dimen/margin_between_x"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:onClick="selectSubjectAll"
                    android:id="@+id/chk_subject_all"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="All" />

                <CheckBox
                    android:onClick="selectSubject"
                    android:id="@+id/chk_physic"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_subject_physic" />

                <CheckBox
                    android:onClick="selectSubject"
                    android:id="@+id/chk_chemistry"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_subject_chemistry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:onClick="selectSubject"
                    android:id="@+id/chk_english"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_subject_english" />

                <CheckBox
                    android:onClick="selectSubject"
                    android:id="@+id/chk_biology"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_subject_biology" />

                <CheckBox
                    android:onClick="selectSubject"
                    android:id="@+id/chk_literature"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_subject_literature" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:onClick="selectSubject"
                    android:id="@+id/chk_history"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_subject_history" />

                <CheckBox
                    android:onClick="selectSubject"
                    android:id="@+id/chk_ethic"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_subject_ethic" />

                <CheckBox
                    android:onClick="selectSubject"
                    android:id="@+id/chk_geography"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_subject_geography" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:onClick="selectSubject"
                    android:id="@+id/chk_math"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_subject_math" />

                <CheckBox
                    android:onClick="selectSubject"
                    android:id="@+id/chk_informatics"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_subject_informatics" />

                <CheckBox
                    android:onClick="selectSubject"
                    android:id="@+id/chk_technology"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_subject_technology" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_y_lg"
            android:layout_marginBottom="@dimen/margin_between_y_lg"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_between_x_md"
                android:gravity="center"
                android:text="@string/filter_reset"
                android:textColor="@color/md_theme_light_primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_between_x_md"
                android:gravity="center"
                android:text="@string/filter_cancel"
                android:textColor="@color/md_theme_light_primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_between_x_md"
                android:gravity="center"
                android:text="@string/filter_submit"
                android:textColor="@color/md_theme_light_primary"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
